--- a/scripts/EDA.Rmd
+++ b/scripts/EDA.Rmd
@@ -84,10 +84,6 @@ sum(missing_per_row > 1)
 
 
 ```{r}
-```
-
-
-```{r}
 sum(missing_per_row[missing_per_row > 1])/sum(missing_per_row)
 ```
 
@@ -98,6 +94,23 @@ ggplot_na_distribution(df$generation.biomass)
 ```
 
 However, this only allows us to look at one variable at a time. There are other functions in the imputeTS package which can be useful for investigating missingness in a (univariate) time series.
+
+We also find three rows where there are anomalous zero values for every generation source apart from Gas. These look as if they should be missing rather than a true 0 value. I've also found two other rows where there is a strange drop off in electricity generation - these were found by calculating the total power for each row, as shown below.
+
+```{r}
+df %>% filter_by_time(time, '2017-11-12 20:00:00', '2017-11-14 18:30:00')
+
+total_power <- df %>% 
+  select(c(1, starts_with("generation"))) %>%
+  pivot_longer(cols = -time, names_to = "generation_source", values_to = 'value') %>%
+  #group_by(generation_source) %>%
+  summarise_by_time(time, .by = 'hour', total_power = sum(value)) %>%
+  arrange(total_power)
+
+total_power
+boxplot(total_power$total_power, main = 'Box plot of hourly total power')
+```
+
 
 We have decided to interpolate the missing values using linear interpolation. The only places where this might be an issue is where are two gaps of length 6 and 8. These will be visualised below.
 
